--- a/e-learno/views/landingPage.ejs
+++ b/e-learno/views/landingPage.ejs
@@ -6,10 +6,32 @@
 
 	<head>
 		<title>E-learno</title>
-		<link rel="icon" type="image/png" href="/images/logo.png"/>
+		<link rel="icon" type="image/png" href="/images/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="/css/landingPage.css">
 	</head>
 	<body>
+		<div id="page1">
+			<nav id="navbar">
+				<img id="logo" src="/images/logo.png" alt="companyLogo.png">
+				<div id="navigator">
+					<ul id="nav-items">
+						<li class="nav-item"><ins>About Us</ins></li>
+						<li class="nav-item"><ins>Pricing</ins></li>
+						<li class="nav-item"><ins>Testimonials</ins></li>
+						<li class="nav-item"><ins>Contact Us</ins></li>
+						<li class="nav-item"><button>LogIn</button></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+
+
+
+
+
+
+
+
 
 		<script type="text/javascript" src="/js/landingPage.js"></script>
 	</body>
